@@ -24,8 +24,12 @@
 VERSION=stable
 
 # Choose repositories want to work.
-# Available repositories : slack,sbo,alien,rlw,slacky,studio,slackr,slonly
+# Available repositories : slack,sbo,alien,rlw,slacky,studio,slackr,slonly,
+#                          ktown{latest}
 # slackr (slackers.it) repository only for Slackware64 current.
+# Ktown (Alien's ktown http://alien.slackbook.org/ktown/) repository 
+# should be in the form 'ktown{SUB_REPOSITORY}' example: ktown{latest} or 
+# or ktown{4.13.3} or ktown{5} for current users etc. Default is ktown{latest}.
 REPOSITORIES=slack,sbo
 
 # Build directory for repository slackbuilds.org. In this directory
