@@ -66,16 +66,16 @@ Optional arguments:
 .SH REPOSITORIES 
  slackware.com = 'slack'
  SlackBuilds.org = 'sbo'
- AlienBob = 'alien'
+ Alien's = 'alien'
  slacky.eu = 'slacky'
  rworkman's = 'rlw'
  studioware.org = 'studio'
  slacker.it = 'slackr'
  slackonly.com = 'slonly'
+ Alien's ktown = 'ktown'
  
  Default enable repository is 'slack' and 'sbo'.
  Add or remove repository in configuration file '/etc/slpkg/slpkg.conf'
-
 
 .SH COLORS
  red, green, yellow, cyan, grey
