@@ -47,7 +47,8 @@ def pkg_checksum(binary, repo):
             'slacky': 'slacky_repo/CHECKSUMS.md5',
             'studio': 'studio_repo/CHECKSUMS.md5',
             'slackr': 'slackr_repo/CHECKSUMS.md5',
-            'slonly': 'slonly_repo/CHECKSUMS.md5'
+            'slonly': 'slonly_repo/CHECKSUMS.md5',
+            'ktown': 'ktown_repo/CHECKSUMS.md5'
         }
         lib = repos[repo]
         f = open(lib_path + lib, "r")
