@@ -36,9 +36,11 @@ def split_package(package):
     alien = "alien"
     slacky = "sl"
     studio = "se"
-    slacks = "cf"
+    slackr = "cf"
     slonly = "_slack"
+    ktown = "alien"
     build = split[-1]
+
     if build.endswith(sbo):
         build = split[-1][:-4]   # and remove .t?z extension
     if build.endswith(slack):
@@ -51,10 +53,13 @@ def split_package(package):
         build = split[-1][:-len(slacky)]
     elif build.endswith(studio):
         build = split[-1][:-len(studio)]
-    elif build.endswith(slacks):
-        build = split[-1][:-len(slacks)]
+    elif build.endswith(slackr):
+        build = split[-1][:-len(slackr)]
     elif build.endswith(slonly):
         build = split[-1][:-len(slonly)]
+    elif build.endswith(ktown):
+        build = split[-1][:-len(ktown)]
+
     arch = split[-2]
     ver = split[-3]
     name = "-".join(split[:-3])
